version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/InitialCondition.rst.txt
.. vale off



:class:`InitialCondition`
=========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.InitialCondition(internalObject: Any)

   Bases: :py:obj:`object`


   
   Defines a InitialCondition.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: InitialCondition

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddCommandSnippet`
            - Creates a new child CommandSnippet.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetDetailsView`
            - GetDetailsView method.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetQuantityName`
            - GetQuantityName method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~TransferLoadsFromLinkedModalSystem`
            - Creates Load Applications automatically to transfer and scale base excitations and load vectors generated for the loads under linked Modal analysis.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AttachedRefs`
            - AttachedRefs property.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~ClsId`
            - ClsId property.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~ContactStatus`
            - Gets or sets the ContactStatus.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the CoordinateSystem.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DefineBy`
            - Gets or sets the DefineBy.
          * - :py:attr:`~Direction`
            - Gets or sets the Direction.
          * - :py:attr:`~DropDirection`
            - Gets or sets the DropDirection.
          * - :py:attr:`~DropHeight`
            - Gets or sets the DropHeight.
          * - :py:attr:`~DropTestDefineBy`
            - Gets or sets the DropTestDefineBy.
          * - :py:attr:`~ExplicitPreStressTime`
            - Gets or sets the ExplicitPreStressTime.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~ImpactVelocity`
            - Gets or sets the ImpactVelocity.
          * - :py:attr:`~InitialEnvironment`
            - Gets or sets the InitialEnvironment.
          * - :py:attr:`~InitialTemperature`
            - Gets or sets the InitialTemperature.
          * - :py:attr:`~InitialTemperatureValue`
            - Gets or sets the InitialTemperatureValue.
          * - :py:attr:`~InputType`
            - Gets or sets the InputType.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LoadControl`
            - Gets or sets the LoadControl.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~ModalEnvironmentHarmonicIC`
            - Gets or sets the ModalEnvironmentHarmonicIC.
          * - :py:attr:`~ModalEnvironmentPSDIC`
            - Gets or sets the ModalEnvironmentPSDIC.
          * - :py:attr:`~ModalEnvironmentRSIC`
            - Gets or sets the ModalEnvironmentRSIC.
          * - :py:attr:`~ModalEnvironmentTransientMSUPIC`
            - Gets or sets the ModalEnvironmentTransientMSUPIC.
          * - :py:attr:`~ModalICEnvironment`
            - Gets or sets the ModalICEnvironment.
          * - :py:attr:`~Mode`
            - Gets or sets the Mode.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~NewtonRaphsonOption`
            - Gets the NewtonRaphsonOption.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~PreStressDefineBy`
            - Gets or sets the PreStressDefineBy.
          * - :py:attr:`~PreStressEnvironmentHarmonicIC`
            - Gets or sets the PreStressEnvironmentHarmonicIC.
          * - :py:attr:`~PreStressEnvironmentHarmonicMSUPModal`
            - Gets the PreStressEnvironmentHarmonicMSUPModal.
          * - :py:attr:`~PreStressEnvironmentModalIC`
            - Gets or sets the PreStressEnvironmentModalIC.
          * - :py:attr:`~PreStressEnvironmentTransientIC`
            - Gets or sets the PreStressEnvironmentTransientIC.
          * - :py:attr:`~PreStressEnvironmentTransientMSUPModal`
            - Gets the PreStressEnvironmentTransientMSUPModal.
          * - :py:attr:`~PreStressICEnvironment`
            - Gets or sets the PreStressICEnvironment.
          * - :py:attr:`~PreStressLoadStep`
            - Gets or sets the PreStressLoadStep.
          * - :py:attr:`~PreStressTime`
            - Gets or sets the PreStressTime.
          * - :py:attr:`~PressureInitialization`
            - Gets or sets the PressureInitialization.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReferenceTemperature`
            - Gets or sets the ReferenceTemperature.
          * - :py:attr:`~ReportedLoadStep`
            - Gets the ReportedLoadStep.
          * - :py:attr:`~ReportedSubStep`
            - Gets the ReportedSubStep.
          * - :py:attr:`~ReportedTime`
            - Gets the ReportedTime.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~Time`
            - Gets or sets the Time.
          * - :py:attr:`~TimeStepFactor`
            - Gets or sets the TimeStepFactor.
          * - :py:attr:`~TotalMagnitude`
            - Gets or sets the Magnitude.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~XComponent`
            - Gets or sets the XComponent.
          * - :py:attr:`~YComponent`
            - Gets or sets the YComponent.
          * - :py:attr:`~ZComponent`
            - Gets or sets the ZComponent.







Property detail
---------------
.. py:property:: AttachedRefs
   :type: Optional[List[int]]


   
   AttachedRefs property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: ClsId
   :type: Optional[int]


   
   ClsId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: ContactStatus
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PreStressContactStatus]


   
   Gets or sets the ContactStatus.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the CoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefineBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadDefineBy]


   
   Gets or sets the DefineBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: Direction
   :type: Optional[Ansys.ACT.Math.Vector3D]


   
   Gets or sets the Direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: DropDirection
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DropDirection]


   
   Gets or sets the DropDirection.
















   ..
       !! processed by numpydoc !!

.. py:property:: DropHeight
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the DropHeight.
















   ..
       !! processed by numpydoc !!

.. py:property:: DropTestDefineBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DropTestDefineBy]


   
   Gets or sets the DropTestDefineBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExplicitPreStressTime
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ExplicitPreStressTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImpactVelocity
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ImpactVelocity.
















   ..
       !! processed by numpydoc !!

.. py:property:: InitialEnvironment
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the InitialEnvironment.
















   ..
       !! processed by numpydoc !!

.. py:property:: InitialTemperature
   :type: Optional[Ansys.Mechanical.DataModel.Enums.InitialTemperatureType]


   
   Gets or sets the InitialTemperature.
















   ..
       !! processed by numpydoc !!

.. py:property:: InitialTemperatureValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the InitialTemperatureValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.InitialConditionsType]


   
   Gets or sets the InputType.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSInitialConditionsAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadControl
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PreStressLoadControl]


   
   Gets or sets the LoadControl.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModalEnvironmentHarmonicIC
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the ModalEnvironmentHarmonicIC.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModalEnvironmentPSDIC
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the ModalEnvironmentPSDIC.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModalEnvironmentRSIC
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the ModalEnvironmentRSIC.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModalEnvironmentTransientMSUPIC
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the ModalEnvironmentTransientMSUPIC.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModalICEnvironment
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the ModalICEnvironment.
















   ..
       !! processed by numpydoc !!

.. py:property:: Mode
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PreStressMode]


   
   Gets or sets the Mode.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NewtonRaphsonOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NewtonRaphsonType]


   
   Gets the NewtonRaphsonOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressDefineBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PreStressStateType]


   
   Gets or sets the PreStressDefineBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressEnvironmentHarmonicIC
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the PreStressEnvironmentHarmonicIC.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressEnvironmentHarmonicMSUPModal
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets the PreStressEnvironmentHarmonicMSUPModal.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressEnvironmentModalIC
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the PreStressEnvironmentModalIC.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressEnvironmentTransientIC
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the PreStressEnvironmentTransientIC.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressEnvironmentTransientMSUPModal
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets the PreStressEnvironmentTransientMSUPModal.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressICEnvironment
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the PreStressICEnvironment.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressLoadStep
   :type: Optional[float]


   
   Gets or sets the PreStressLoadStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreStressTime
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the PreStressTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: PressureInitialization
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PressureInitializationType]


   
   Gets or sets the PressureInitialization.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReferenceTemperature
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ReferenceTemperature.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReportedLoadStep
   :type: Optional[int]


   
   Gets the ReportedLoadStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReportedSubStep
   :type: Optional[int]


   
   Gets the ReportedSubStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReportedTime
   :type: Optional[float]


   
   Gets the ReportedTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: Time
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Time.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeStepFactor
   :type: Optional[float]


   
   Gets or sets the TimeStepFactor.
















   ..
       !! processed by numpydoc !!

.. py:property:: TotalMagnitude
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Magnitude.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: XComponent
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the XComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: YComponent
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the YComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZComponent
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ZComponent.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddCommandSnippet() -> Ansys.ACT.Automation.Mechanical.CommandSnippet

   
   Creates a new child CommandSnippet.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDetailsView() -> Ansys.ACT.Automation.Mechanical.DetailsViewData

   
   GetDetailsView method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetQuantityName(obj: Ansys.Common.Interop.DSObjectsAuto.IDSInitialConditionsAuto) -> str

   
   GetQuantityName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: TransferLoadsFromLinkedModalSystem() -> None

   
   Creates Load Applications automatically to transfer and scale base excitations and load vectors generated for the loads under linked Modal analysis.

   ..
       !! processed by numpydoc !!



.. vale on